all info listed and button created in products index

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,11 @@
 <h1>PRODUCTS</h1>
 <ul>
   <% @products.each do |product| %>
-    <li><%= product.name %></li>
+    <li>
+      <%= product.name %><br>
+      <%= product.price %><br>
+      <%= product.description %><br>
+      <button>Add to order</button>
+    </li>
   <% end %>
 </ul>
