--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,1 +1,9 @@
 <h1>ORDERS</h1>
+<ul>
+  <% @orders.each do |order| %>
+    <li>
+      <%= order.name %>
+      <button>See Order</button>
+    </li>
+  <% end %>
+</ul>
