corrected path to orders

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
 <h1>Home Page</h1>
 
-<%= link_to "Products Page", products_path %>
+<%= link_to "Products Page", products_path %><br/>
 <%= link_to "Orders Page", orders_path %>
