--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,5 +9,5 @@
     </li>
   <% end %>
 </ul>
-<%= link_to "Home Page", root_path%>
+<%= link_to "Home Page", root_path%><br/>
 <%= link_to "Orders Page", orders_path%>
